# functionalProgramming

./: .gitignore  README.md
beginners-course/: lists-solutions.fsx
csharp-fsharp/: FunctionalProgramming.sln
csharp-fsharp/TurtleGraphicsFSharp/: PartOne.fs  PartTwo.fs  Program.fs
csharp-fsharp/csharp/: CountLines_Lecture1.cs  HigherOrderFunction.cs  LazyPerformance.cs  Program.cs  SideEffectsInFP_Lecture1.cs  SideEffectsLazyEvaluation.cs  Strategy.cs
csharp-fsharp/fsharp/: Basics.fs  Basics2.fsx  BasicsA.fsx  BasicsB.fsx  Basics_A2.fsx  Basics_B2.fsx  CountLines_Lecture1.fs  FunctionalProgramming.fsproj  ImmutableSet.fsx  InteractiveApplications.fsx  LectureBasics.fsx  ListsAndHOF_A.fsx  ListsAndHOF_B.fsx  ParsingMetar.fs  Program.fs
elm/: elmTodo.elm
exercise-sheets/1/: exercise.md
exercise-sheets/2/: exercise.md
exercise-sheets/3/: exercise.md
exercise-sheets/4/: exercise.md
exercise-sheets/5/: ImmutableMap.fsx  exercise.md
haskell/: HelloWorld.cabal  LICENSE
haskell/app/: Basics.hs  CountLines.hs  Main.hs  NoMixIO.hs
haskell/examples/: FunctionComposition.hs  LazyPerformance.hs  Sorting.hs
parsing/: metarSol.fs
turtle-project/TurtleGraphicsFSharp/: TurtleGraphicsFSharp.fsproj
turtle-project/sheet-sources/: exercise1.tex  exercise2.tex  references2.bib
turtle-project/turtleGraphicsHaskell/: CHANGELOG.md  README.md  turtleGraphicsHaskell.cabal
turtle-project/turtleGraphicsHaskell/app/: Main.hs  PartOne.hs
