cabal-version:      3.0
name:               HelloWorld
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Harald Steinlechner
-- maintainer:
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable HelloWorld
    import:           warnings
    main-is:          Main.hs
    other-modules:    NoMixIO, Basics, Sorting, CountLines, LazyPerformance, FunctionComposition
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1, directory, QuickCheck
    hs-source-dirs:   app
    default-language: Haskell2010
